Front end by, Kevlar

--- a/payroll_web_app.client/src/index.css
+++ b/payroll_web_app.client/src/index.css
@@ -24,8 +24,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* ✅ REMOVE flex centering that was shrinking layout */
+  display: block;
   min-width: 320px;
   min-height: 100vh;
 }
